<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>
    <import type="android.view.View" />
    <variable
      name="viewModel"
      type="org.oppia.android.app.administratorcontrols.administratorcontrolsitemviewmodel.AdministratorControlsDownloadPermissionsViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/download_permissions_text_view"
      style="@style/CaptionViewStart"
      android:layout_width="match_parent"
      android:background="@color/component_color_shared_screen_tertiary_background_color"
      android:paddingStart="@dimen/administrator_controls_download_permissions_view_download_permissions_text_view_padding_start"
      android:paddingTop="28dp"
      android:paddingEnd="@dimen/administrator_controls_download_permissions_view_download_permissions_text_view_padding_end"
      android:paddingBottom="20dp"
      android:text="@string/administrator_controls_fragment_download_permissions_text"
      android:textColor="@color/component_color_shared_active_text_color"
      app:layout_constraintBottom_toTopOf="@id/topic_update_on_wifi_constraint_layout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/topic_update_on_wifi_constraint_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/component_color_shared_content_container_background_color"
      android:clickable="true"
      android:focusable="true"
      android:importantForAccessibility="yes"
      android:onClick="@{(view) -> viewModel.onTopicWifiUpdatePermissionChanged()}"
      android:paddingStart="@dimen/administrator_controls_download_permissions_view_topic_update_on_wifi_constraint_layout_padding_start"
      android:paddingTop="20dp"
      android:paddingEnd="@dimen/administrator_controls_download_permissions_view_topic_update_on_wifi_constraint_layout_padding_end"
      android:paddingBottom="20dp"
      app:layout_constraintBottom_toTopOf="@id/view_divider"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/download_permissions_text_view">

      <TextView
        android:id="@+id/topic_update_on_wifi_title_text_view"
        style="@style/Body"
        android:paddingBottom="4dp"
        android:text="@string/administrator_controls_fragment_topic_update_on_wifi_text"
        android:textColor="@color/component_color_shared_primary_dark_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/topic_update_on_wifi_description_text_view"
        style="@style/Subtitle2ViewStart"
        android:layout_width="0dp"
        android:text="@string/administrator_controls_fragment_topic_update_on_wifi_description"
        android:textColor="@color/component_color_shared_secondary_3_text_color"
        app:layout_constraintEnd_toStartOf="@id/topic_update_on_wifi_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topic_update_on_wifi_title_text_view" />

      <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/topic_update_on_wifi_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="@dimen/administrator_controls_download_permissions_view_topic_update_on_wifi_widget_switch_compat_margin_end"
        android:checked="@{viewModel.isTopicWifiUpdatePermission}"
        android:clickable="false"
        android:focusable="false"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:theme="@style/OppiaSwitchCompatTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/topic_update_on_wifi_description_text_view"
        app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
      android:id="@+id/view_divider"
      android:layout_width="match_parent"
      android:layout_height="2dp"
      android:background="@color/component_color_shared_divider_color"
      app:layout_constraintBottom_toTopOf="@id/auto_update_topic_constraint_layout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/topic_update_on_wifi_constraint_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/auto_update_topic_constraint_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/component_color_shared_content_container_background_color"
      android:clickable="true"
      android:focusable="true"
      android:importantForAccessibility="yes"
      android:onClick="@{(view) -> viewModel.onTopicAutoUpdatePermissionChanged()}"
      android:paddingStart="@dimen/administrator_controls_download_permissions_view_auto_update_topic_constraint_layout_padding_start"
      android:paddingTop="20dp"
      android:paddingEnd="@dimen/administrator_controls_download_permissions_view_auto_update_topic_constraint_layout_padding_end"
      android:paddingBottom="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/view_divider">

      <TextView
        android:id="@+id/auto_update_topic_title_text_view"
        style="@style/Body"
        android:paddingBottom="4dp"
        android:text="@string/administrator_controls_fragment_auto_update_topic_text"
        android:textColor="@color/component_color_shared_primary_dark_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/auto_update_topic_description_text_view"
        style="@style/Subtitle2ViewStart"
        android:layout_width="0dp"
        android:text="@string/administrator_controls_fragment_auto_update_topic_description"
        android:textColor="@color/component_color_shared_secondary_3_text_color"
        app:layout_constraintEnd_toStartOf="@id/auto_update_topic_switch"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auto_update_topic_title_text_view" />

      <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/auto_update_topic_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="@dimen/administrator_controls_download_permissions_view_auto_update_topic_widget_switch_compat_margin_end"
        android:checked="@{viewModel.isTopicAutoUpdatePermission}"
        android:clickable="false"
        android:focusable="false"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:theme="@style/OppiaSwitchCompatTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/auto_update_topic_description_text_view"
        app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
