...

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/general_text_view"
      style="@style/Heading5ViewStart"
      android:layout_width="match_parent"
      android:background="@color/component_color_shared_screen_tertiary_background_color"
      android:paddingStart="@dimen/administrator_controls_general_view_general_text_view_padding_start"
      android:paddingTop="@dimen/administrator_controls_general_view_general_text_view_padding_top"
      android:paddingEnd="@dimen/administrator_controls_general_view_general_text_view_padding_end"
...
