...

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/account_actions_text_view"
      style="@style/CaptionViewStart"
      android:layout_width="match_parent"
      android:background="@color/component_color_shared_screen_tertiary_background_color"
      android:paddingStart="@dimen/administrator_control_account_actions_view_account_actions_text_view_padding_start"
      android:paddingTop="28dp"
      android:paddingEnd="@dimen/administrator_control_account_actions_view_account_actions_text_view_padding_end"
...
